pz4/log.txt
make -C /lib/modules/5.15.0-163-generic/build M= modules
make[1]: Entering directory '/usr/src/linux-headers-5.15.0-163-generic'
  SYNC    include/config/auto.conf.cmd
  HOSTCC  scripts/basic/fixdep
  HOSTCC  scripts/kconfig/conf.o
  HOSTCC  scripts/kconfig/confdata.o
  HOSTCC  scripts/kconfig/expr.o
  LEX     scripts/kconfig/lexer.lex.c
make[1]: Leaving directory '/usr/src/linux-headers-5.15.0-163-generic'
make -C /lib/modules/5.15.0-163-generic/build M= modules
make[1]: Entering directory '/usr/src/linux-headers-5.15.0-163-generic'
  SYNC    include/config/auto.conf.cmd
  LEX     scripts/kconfig/lexer.lex.c
make[1]: Leaving directory '/usr/src/linux-headers-5.15.0-163-generic'
make -C /lib/modules/5.15.0-163-generic/build M= modules
make[1]: Entering directory '/usr/src/linux-headers-5.15.0-163-generic'
  SYNC    include/config/auto.conf.cmd
  LEX     scripts/kconfig/lexer.lex.c
/bin/sh: 1: flex: not found
make[3]: *** [scripts/Makefile.host:9: scripts/kconfig/lexer.lex.c] Error 127
make[2]: *** [Makefile:630: syncconfig] Error 2
make[1]: *** [Makefile:750: include/config/auto.conf.cmd] Error 2
make[1]: Leaving directory '/usr/src/linux-headers-5.15.0-163-generic'
make: *** [Makefile:4: all] Error 2

make -C /lib/modules/5.15.0-163-generic/build M= modules
make[1]: Entering directory '/usr/src/linux-headers-5.15.0-163-generic'
  SYNC    include/config/auto.conf.cmd
  LEX     scripts/kconfig/lexer.lex.c
/bin/sh: 1: flex: not found
make[3]: *** [scripts/Makefile.host:9: scripts/kconfig/lexer.lex.c] Error 127
make[2]: *** [Makefile:630: syncconfig] Error 2
make[1]: *** [Makefile:750: include/config/auto.conf.cmd] Error 2
make[1]: Leaving directory '/usr/src/linux-headers-5.15.0-163-generic'
make: *** [Makefile:4: all] Error 2

make -C /lib/modules/5.15.0-163-generic/build M= modules
make[1]: Entering directory '/usr/src/linux-headers-5.15.0-163-generic'
  SYNC    include/config/auto.conf.cmd
  LEX     scripts/kconfig/lexer.lex.c
  YACC    scripts/kconfig/parser.tab.[ch]
  HOSTCC  scripts/kconfig/lexer.lex.o
  HOSTCC  scripts/kconfig/menu.o
  HOSTCC  scripts/kconfig/parser.tab.o
  HOSTCC  scripts/kconfig/preprocess.o
  HOSTCC  scripts/kconfig/symbol.o
  HOSTCC  scripts/kconfig/util.o
  HOSTLD  scripts/kconfig/conf
make[2]: *** No rule to make target 'arch/x86/entry/syscalls/syscall_32.tbl', needed by 'arch/x86/include/generated/uapi/asm/unistd_32.h'.  Stop.
make[1]: *** [arch/x86/Makefile:217: archheaders] Error 2
make[1]: Leaving directory '/usr/src/linux-headers-5.15.0-163-generic'
make: *** [Makefile:4: all] Error 2

make -C /lib/modules/5.15.0-163-generic/build M= modules
make[1]: Entering directory '/usr/src/linux-headers-5.15.0-163-generic'
make[2]: *** No rule to make target 'arch/x86/entry/syscalls/syscall_32.tbl', needed by 'arch/x86/include/generated/uapi/asm/unistd_32.h'.  Stop.
make[1]: *** [arch/x86/Makefile:217: archheaders] Error 2
make[1]: Leaving directory '/usr/src/linux-headers-5.15.0-163-generic'
make: *** [Makefile:4: all] Error 2

make: Entering directory '/usr/src/linux-headers-5.15.0-163-generic'
  CC [M]  /home/drivers/drivers/pz4/main.o
make: Leaving directory '/usr/src/linux-headers-5.15.0-163-generic'

make: Entering directory '/usr/src/linux-headers-5.15.0-163-generic'
  CC [M]  /home/drivers/drivers/pz4/main.o
/home/drivers/drivers/pz4/main.c:21:12: error: static declaration of ‘simple_open’ follows non-static declaration
   21 | static int simple_open(struct inode *inode, struct file *file)
      |            ^~~~~~~~~~~
In file included from /home/drivers/drivers/pz4/main.c:2:
./include/linux/fs.h:3464:12: note: previous declaration of ‘simple_open’ with type ‘int(struct inode *, struct file *)’
 3464 | extern int simple_open(struct inode *inode, struct file *file);
      |            ^~~~~~~~~~~
make[1]: *** [scripts/Makefile.build:297: /home/drivers/drivers/pz4/main.o] Error 1
make: *** [Makefile:1930: /home/drivers/drivers/pz4] Error 2
make: Leaving directory '/usr/src/linux-headers-5.15.0-163-generic'

make -C /lib/modules/5.15.0-163-generic/build M= modules
make[1]: Entering directory '/usr/src/linux-headers-5.15.0-163-generic'
make[2]: *** No rule to make target 'arch/x86/entry/syscalls/syscall_32.tbl', needed by 'arch/x86/include/generated/uapi/asm/unistd_32.h'.  Stop.
make[1]: *** [arch/x86/Makefile:217: archheaders] Error 2
make[1]: Leaving directory '/usr/src/linux-headers-5.15.0-163-generic'
make: *** [Makefile:4: all] Error 2

make -C /lib/modules/5.15.0-163-generic/build M= modules
make[1]: Entering directory '/usr/src/linux-headers-5.15.0-163-generic'
make[2]: *** No rule to make target 'arch/x86/entry/syscalls/syscall_32.tbl', needed by 'arch/x86/include/generated/uapi/asm/unistd_32.h'.  Stop.
make[1]: *** [arch/x86/Makefile:217: archheaders] Error 2
make[1]: Leaving directory '/usr/src/linux-headers-5.15.0-163-generic'
make: *** [Makefile:4: all] Error 2

make -C /lib/modules/5.15.0-163-generic/build M=/home/drivers/drivers/pz4 modules
make[1]: Entering directory '/usr/src/linux-headers-5.15.0-163-generic'
make[1]: Leaving directory '/usr/src/linux-headers-5.15.0-163-generic'

make -C /lib/modules/5.15.0-163-generic/build M=/home/drivers/drivers/pz4 modules
make[1]: Entering directory '/usr/src/linux-headers-5.15.0-163-generic'
  CC [M]  /home/drivers/drivers/pz4/main.o
  MODPOST /home/drivers/drivers/pz4/Module.symvers
  CC [M]  /home/drivers/drivers/pz4/main.mod.o
  LD [M]  /home/drivers/drivers/pz4/main.ko
make[1]: Leaving directory '/usr/src/linux-headers-5.15.0-163-generic'

